# news-prediction-app

./: .gitignore  Dockerfile  api_requirements.txt  data.dvc  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: data_pipeline.yaml  deployment.yml  training_workflow.yaml
data/raw/: articles.csv
data/reference_data/: articles_with_keywords.csv
gx/: great_expectations.yml
gx/checkpoints/: test_checkpoint.yml
gx/expectations/: .ge_store_backend_id  aaaaa.json  ffff.json  fffffffffff.json  hgfh.json  news.json  news_data.json  news_data_suite.json  news_suite.json  nmmkmnmnm.json  suite.json  suite_news.json  test.json  testt.json
gx/uncommitted/: config_variables.yml  edit_news_data_suite.ipynb
gx/uncommitted/.ipynb_checkpoints/: datasource_new-checkpoint.ipynb  edit_aaaaa-checkpoint.ipynb  edit_fffffffffff-checkpoint.ipynb  edit_news_data_suite-checkpoint.ipynb  edit_nmmkmnmnm-checkpoint.ipynb  edit_test-checkpoint.ipynb
gx/uncommitted/validations/: .ge_store_backend_id
models/: news_prediction_model.h5  news_prediction_model.joblib  news_prediction_model_compressed.joblib
processed_current/: articles_with_keywords.csv
processed_current/processed/: articles_with_keywords.csv
reference_data/processed/: articles_with_keywords.csv
reports/: report.html  test_results.json  validation_report.txt
src/client/news-prediction-app/: Dockerfile  (+2 more)
src/data/: checkpoint_run.py  evidently_test.py  fetch_news_data.py
src/models/: bert.py  metrics.csv  news_prediction.py  params.yml
src/serve/: articles.csv  prediction_api.py
(+32 files in other folders)
