[tool.poetry]
name = "news-prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.2"
scikit-learn = "^1.5.0"
keybert = "^0.8.4"
python-dotenv = "^1.0.1"
great-expectations = "^0.18.15"
poethepoet = "^0.26.1"
scikeras = "^0.13.0"
mlflow = "^2.13.1"
onnxruntime = "^1.18.0"
skl2onnx = "^1.17.0"
flask = "^3.0.3"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
